# incident-detection-project

./: README.md  dvc.yaml  params.yaml  prophet.sh  pyproject.toml
fonctions/: compute_rolling_mean.py  get_holidays.py  vrais_params.py
fonctions/crisis_df/: load_crisis_df.py  save_crisis_df.py
fonctions/crisis_graphs/: compute_graphs_total.py  compute_graphs_variables.py  compute_graphs_variables_par_variables.py  compute_histogramme_total.py  mise_en_forme_graph_total.py  mise_en_forme_histogramme_total.py  mise_en_forme_variables.py  mise_en_forme_variables_par_variables.py  save_graphs.py
fonctions/isolation_forest/: compute_isolation_forest.py  save_predictions_ISO.py
fonctions/metrics/: compute_dataframe_metrics.py  compute_tableaux_metrics.py  fonctions_metrics.py  save_metrics.py
fonctions/nb_df/: add_crisis.py  build_dataset.py  changing_visual_crm_values.py  create_200000_lines_df.py  data_cleaning_strings.py  encoding_dataset.py  extract_data.py  lock_and_load.py  save_df.py
fonctions/prophete/: compute_prophete.py  save_prophete.py
fonctions/random_algo/: bernoulli.py  compute_random_algorithm.py  compute_random_colonnes.py  save_prediction_random.py
scripts/: compute_ISO.py  compute_crisis.py  compute_crisis_graphs_overall.py  compute_crisis_graphs_temps.py  compute_crisis_graphs_variables.py  compute_data_cleaning.py  compute_dataframe_cleaned.py  compute_lock_and_load.py  compute_prophete.py  compute_rand_algo.py  compute_tableau_metrics.py
